--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "TP4 de la capacitación de Fizzmod por medio de Educación IT",
   "main": "server.js",
   "scripts": {
-    "dev":"nodemon src/server.js",
+    "dev": "nodemon src/server.js",
     "start": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -23,6 +23,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-handlebars": "^5.3.0",
     "mongoose": "^5.12.5"
   },
   "devDependencies": {
