--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.0",
-    "mongoose": "^5.12.5"
+    "googleapis": "^72.0.0",
+    "mongoose": "^5.12.5",
+    "nodemailer": "^6.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
