--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "TP4 de la capacitación de Fizzmod por medio de Educación IT",
   "main": "server.js",
   "scripts": {
+    "dev":"nodemon src/server.js",
     "start": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
