--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "TP4 de la capacitación de Fizzmod por medio de Educación IT",
   "main": "server.js",
   "scripts": {
-    "dev":"nodemon src/server.js",
+    "dev": "nodemon src/server.js",
     "start": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -25,6 +25,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.3.0",
     "googleapis": "^72.0.0",
+    "handlebars": "^4.7.7",
     "mongoose": "^5.12.5",
     "nodemailer": "^6.5.0"
   },
